--- a/.travis.yml
+++ b/.travis.yml
@@ -5,49 +5,4 @@ install:
   - pip install shyaml
 
 script:
-  - |
-    for POLYFILL in $(echo */ | sed 's:/::g'); do
-      mkdir -p ../polyfills/$POLYFILL
-      export CLASS=$(shyaml get-value class < $POLYFILL/js.yml)
-      export NAME=$(shyaml get-value name < $POLYFILL/js.yml)
-      cat << EOF > ../polyfills/$POLYFILL/raw.js
-      if (!$CLASS.prototype.$NAME) {
-        // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/$CLASS/$NAME#Polyfill
-        $CLASS.prototype.$NAME = $(perl -pe 'chomp if eof' $POLYFILL/polyfill.js | sed '2,$s/^/    /g');
-      }
-    EOF
-      cat << EOF > ../polyfills/$POLYFILL/index.js
-    $(cat LICENSE.head)
-
-    (function() {
-    $(cat ../polyfills/$POLYFILL/raw.js)
-    })();
-    EOF
-    done
-  - |
-    cat << EOF > ../polyfills/index.js
-    $(cat LICENSE.head)
-
-    (function() {
-    $(find ../polyfills -name "raw.js" -exec awk 'FNR==1&&NR!=1{print ""}1' {} + -exec rm {} +)
-    })();
-    EOF
-  - |
-    for POLYFILL in $(echo */ | sed 's:/::g'); do
-      export CLASS=$(shyaml get-value class < $POLYFILL/ts.yml)
-      cat << EOF > ../polyfills/$POLYFILL/raw.d.ts
-    interface $CLASS {
-      /** $(head -n1 $POLYFILL/ts.doc)
-    $(tail -n+2 $POLYFILL/ts.doc | sed 's/^/    \* /g')
-        */
-      $(cat $POLYFILL/signature.d.ts)
-    }
-    EOF
-    echo | cat LICENSE.head - ../polyfills/$POLYFILL/raw.d.ts > ../polyfills/$POLYFILL/index.d.ts
-    done
-  - |
-    cat << EOF > ../polyfills/index.d.ts
-    $(cat LICENSE.head)
-
-    $(find ../polyfills -name "raw.d.ts" -exec awk 'FNR==1&&NR!=1{print ""}1' {} + -exec rm {} +)
-    EOF
+  - build.sh
