Build typings.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ after_success:
   - if [ -n "$TRAVIS_PULL_REQUEST" ]; then git log $TRAVIS_COMMIT_RANGE --pretty=oneline >> $TRAVIS_BUILD_DIR/../POLYFILL_UPDATE_MSG; fi
   - if [ -n "$TRAVIS_PULL_REQUEST" ]; then mkdir -p ~/.ssh && cp gh_rsa ~/.ssh/id_rsa && chmod 700 ~/.ssh && chmod 600 ~/.ssh/id_rsa; fi
   - if [ -n "$TRAVIS_PULL_REQUEST" ]; then git clone -b deploy git@github.com:$TRAVIS_REPO_SLUG.git $TRAVIS_BUILD_DIR-deploy; fi
-  - if [ -n "$TRAVIS_PULL_REQUEST" ]; then rm -rf $TRAVIS_BUILD_DIR-deploy/*/ $TRAVIS_BUILD_DIR-deploy/index*; fi
+  - if [ -n "$TRAVIS_PULL_REQUEST" ]; then rm -rf $TRAVIS_BUILD_DIR-deploy/*/ $TRAVIS_BUILD_DIR-deploy/index* $TRAVIS_BUILD_DIR-deploy/*.json; fi
   - if [ -n "$TRAVIS_PULL_REQUEST" ]; then mv $TRAVIS_BUILD_DIR-output/* $TRAVIS_BUILD_DIR-deploy/; fi
   - if [ -n "$TRAVIS_PULL_REQUEST" ]; then cd $TRAVIS_BUILD_DIR-deploy; fi
   - if [ -n "$TRAVIS_PULL_REQUEST" ]; then git config --global user.email "nabijaczleweli@gmail.com" && git config --global user.name "nabijaczleweli Autouploader Bot" && git config --global push.default simple; fi
