--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_bac0f54105e2_key -iv $encrypted_bac0f54105e2_iv -in gh_rsa.enc -out gh_rsa -d
 
 install:
-  - pip install shyaml
+  - pip install shyaml jsmin
 
 script:
   - OUT="$TRAVIS_BUILD_DIR-output" ./build.sh
