--- a/find/js.yml
+++ b/find/js.yml
@@ -1,2 +1,3 @@
 class: Array
 name: find
+source: "https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/find#Polyfill"
